--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ PORT=5000
 MONGO_URI=mongodb+srv://Victoire:Victoire@node.65il9u7.mongodb.net/flashcard-app?retryWrites=true&w=majority
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRE=30d
-JWT_COOKIE_EXPIRE=30  ;
+JWT_COOKIE_EXPIRE=30
 
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
