--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=5000
 MONGO_URI=mongodb+srv://Victoire:Victoire@node.65il9u7.mongodb.net/flashcard-app?retryWrites=true&w=majority
+# node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
