--- a/backend/package.json
+++ b/backend/package.json
@@ -5,23 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express-async-errors": "^3.1.1",
-    "express-rate-limit": "^6.10.0",
-    "helmet": "^7.0.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "xss-clean": "^0.1.1"
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2"
+    "nodemon": "^3.1.9"
   },
   "author": "Ushindi Victoire",
   "license": "MIT"
