--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "backend",
+  "name": "flashcard-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Flashcard Quiz App Backend",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "dotenv": "^16.3.1",
     "express-async-errors": "^3.1.1",
-    "express-rate-limit": "^8.2.1",
-    "helmet": "^8.1.0",
-    "mongoose": "^9.1.6"
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.0.1"
   }
 }
